# mujoco_playground

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  aa  convert_urdf.py  pyproject.toml  todo_von_thorben  train_brax.py
.github/workflows/: ci.yml  pypi.yml
config/: train_brax.yaml
learning/: train_jax_ppo.py  train_rsl_rl.py
learning/notebooks/: manipulation.ipynb  training_vision_1.ipynb  vision.ipynb
mujoco_playground/: __init__.py
mujoco_playground/_src/: collision_env_test.py  mj_utils.py  mjx_env.py  mjx_import_test.py  my_custom_env.py  registry.py  registry_test.py  reward.py  rewards.py  wrapper.py  wrapper_test.py  wrapper_torch.py
mujoco_playground/_src/dm_control_suite/: README.md  __init__.py  acrobot.py  ball_in_cup.py  cartpole.py  cheetah.py  common.py  dm_control_suite_test.py  finger.py  fish.py  hopper.py  humanoid.py  pendulum.py  point_mass.py  quadruped.py  reacher.py  swimmer.py  walker.py
mujoco_playground/_src/dm_control_suite/xmls/: finger.xml  quadruped.xml
mujoco_playground/_src/locomotion/: __init__.py  locomotion_test.py
mujoco_playground/_src/locomotion/anymal/: TrotAnymal.py  TrotUtil.py  base.py
mujoco_playground/_src/locomotion/apollo/: base.py  constants.py  joystick.py
mujoco_playground/_src/locomotion/barkour/: joystick.py
mujoco_playground/_src/locomotion/berkeley_humanoid/: joystick.py
mujoco_playground/_src/locomotion/g1/: joystick.py
mujoco_playground/_src/locomotion/go1/: README.md  __init__.py  base.py  getup.py  go1_constants.py  handstand.py  joystick.py  visualization.py
mujoco_playground/_src/locomotion/go2/: README.md  TrotGo2.py  TrotUtil.py  base.py  getup.py  go2_constants.py  handstand.py  randomize.py
mujoco_playground/_src/locomotion/h1/: inplace_gait_tracking.py  joystick.py  joystick_gait_tracking.py
mujoco_playground/_src/locomotion/k1/: base.py  joystick.py  k1_constants.py  randomize.py
mujoco_playground/_src/locomotion/op3/: joystick.py
mujoco_playground/_src/locomotion/solo8/: base.py  (+4 more)
mujoco_playground/_src/manipulation/: __init__.py  manipulation_test.py
mujoco_playground/config/: dm_control_suite_params.py  locomotion_params.py  manipulation_params.py
mujoco_playground/experimental/: bc_peg_insertion.py  brax_torch_onnx.ipynb  train_dagger.py
mujoco_playground/experimental/jax2onnx/: aloha_nets_to_onnx.py  aloha_nets_utils.py
mujoco_playground/experimental/learning/: anymal_trot.ipynb  go2_trot.ipynb
mujoco_playground/experimental/sim2sim/: keyboard_gamepad.py  play_apollo_joystick.py  play_go2_trot.py  play_go2_trot_jax.py  play_wolfgang_joystick.py  play_x02_joystick.py
mujoco_playground/experimental/utils/: plotting.py
mujoco_playground/experimental/x02_walking/: convert_to_onnx.py  train_x02_walk_joystick.py
mujoco_playground/learning/: dm_control_suite_params.py  locomotion_params.py  manipulation_params.py  training.ipynb
stls/: 01_neck_servo_connector_v1_1.stl  02_shoulder_mount_v1__1__1.stl  02a_shoulder_servo_connector_v1__1__1.stl  02a_shoulder_servo_connector_v1__2__1.stl  04_upper_arm_new_v2_1.stl  04_upper_arm_new_v2__1__1.stl  04_upper_arm_new_v2__2__1.stl  04_upper_arm_new_v2__3__1.stl  06_lower_arm_v3__1__1.stl  06_lower_arm_v3__2__1.stl  06_lower_arm_v3__3__1.stl  07_lower_arm_handrail_X_v2__1__1.stl  08_upper_body_cage_v2_1.stl  12a_hip_servo_spacer_v1_1.stl  12a_hip_servo_spacer_v1__2__1.stl  12a_hip_servo_spacer_v1__3__1.stl  13_thrust_bearing_v2_1.stl  13_thrust_bearing_v2__2__1.stl  14_motor_joint_connector_v1_1.stl  14_motor_joint_connector_v1__3__1.stl  14_motor_joint_connector_v1__4__1.stl  14_motor_joint_connector_v1__7__1.stl  15_upper_leg_v2_1.stl  15_upper_leg_v2__1__1.stl  15_upper_leg_v2__3__1.stl  17_knee_joint_connector_new_v2__2__1.stl  17_knee_joint_connector_new_v2__3__1.stl  18_lower_leg_v2_1.stl  18_lower_leg_v2__1__1.stl  18_lower_leg_v2__3__1.stl  19_lower_leg_front_spacer_v2_1.stl  22_foot_plate_left_v2_1.stl  23_foot_plate_right_v2_1.stl  25_Orin_Baseplate_v14_1.stl  31_SEA_Metal_v2__1__1.stl  33_tpu_sea_v1__1__1.stl  35_TPU_Bumper_BitB_right_v3_1.stl  35_TPU_Bumper_BitB_right_v3__1__1.stl  35_TPU_Bumper_BitB_v6_1.stl  Battery_4S_5Ah_v1_1.stl  (+36 more)
(+256 files in other folders)
