[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mujoco_playground"
version = "0.0.0"
readme = "README.md"
authors = [
    {name = "Google DeepMind", email = "mujoco@deepmind.com"},
]
requires-python = ">=3.9"
dynamic = ["description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "etils",
    "flax",
    "jax",
    "lxml",
    "ml_collections",
    "mujoco-mjx",
    "mujoco",
    "tqdm",
    "brax",  # TODO(btaba): Remove this dependency.
]
keywords = ["mjx", "mujoco", "dm_control"]

[project.optional-dependencies]
test = [
    "absl-py",
    "pytest",
    "dm_control",
]
dev = [
    "black",
    "mujoco_playground[test]",
    "mypy",
    "ruff",
]
all = [
    "mujoco_playground[dev]",
]

[tool.flit.module]
name = "mujoco_playground"

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I"  # Import sorting.
]
lint.ignore = [
    "E741", # Ambiguous variable name. (l, O, or I)
    "E501",  # Line too long.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901"  # For loop variable overwritten.
]
exclude = [
    "mujoco_menagerie/",
]

[tool.black]
extend-exclude = "mujoco_menagerie/"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["scripts/", "mujoco_menagerie/"]

[tool.pytest.ini_options]
addopts = [
    "--ignore=mujoco_menagerie",
]
testpaths = [
    "tests",
]
