[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mujoco_playground"
version = "0.0.0"
readme = "README.md"
authors = [
    {name = "Google DeepMind", email = "mujoco@deepmind.com"},
]
requires-python = ">=3.9"
dynamic = ["description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "etils",
    "flax",
    "jax",
    "lxml",
    "ml_collections",
    "mujoco-mjx",
    "mujoco",
    "tqdm",
    "brax",  # TODO(btaba): Remove this dependency.
]
keywords = ["mjx", "mujoco", "dm_control"]

[project.optional-dependencies]
test = [
    "absl-py",
    "pytest",
    "dm_control",
]
dev = [
    "black",
    "mujoco_playground[test]",
    "mypy",
    "ruff",
]
all = [
    "mujoco_playground[dev]",
]

[tool.flit.module]
name = "mujoco_playground"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["scripts/", "mujoco_menagerie/"]

[tool.pytest.ini_options]
addopts = [
    "--ignore=mujoco_menagerie",
]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = "mujoco_menagerie/"
